[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/fonts/Clickuper.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/HostMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="HostMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 200

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HostLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 357.0
margin_top = 58.0
margin_right = 923.0
margin_bottom = 150.0
custom_colors/font_color_shadow = Color( 0.278431, 0.490196, 0.352941, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Hosting Game"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 1280.0
margin_bottom = 461.0

[node name="Gamecode" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 553.0
margin_right = 727.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "ABCD123"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 661.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 178.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
text = " <- Back"

[connection signal="tree_exited" from="." to="." method="_on_HostMenu_tree_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
